--- a/sass/_case-study.scss
+++ b/sass/_case-study.scss
@@ -1,22 +1,46 @@
+@use "breakpoints" as bp;
+
 .case-study {
   background: #ffffff;
+
+  @include bp.mq(md) {
+    padding-block: 100px 60px;
+  }
 }
 
 .case-study__inner {
   padding-left: 20px;
+
+  @include bp.mq(md) {
+    padding-inline: 80px;
+  }
 }
 
 .case-study__heading {
   padding-left: 10px;
+
+  @include bp.mq(md) {
+    padding-left: 0;
+  }
 }
 
 .case-study__slider {
   margin-top: 50px;
+
+  @include bp.mq(md) {
+    margin-top: 40px;
+  }
 }
 
 .case-study__swiper {
   padding-left: 8px;
   padding-bottom: calc(30px + 12px);
+
+  @include bp.mq(md) {
+    padding-left: unset;
+    padding-inline: calc(44px + 18px);
+    padding-bottom: calc(45px + 12px);
+  }
 }
 
 .case-study__slide {
@@ -27,10 +51,13 @@
   border-radius: 4px;
   filter: drop-shadow(5px 7px 34px #f1f1f1);
   width: 320px !important;
+
+
 }
 
 .case-study__image {
   img {
+    width: 320px;
   }
 }
 
@@ -115,4 +142,7 @@
   margin-top: 30px;
   text-align: center;
 
+  @include bp.mq(md) {
+    margin-top: 24px;
+  }
 }
