--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,20 +1,48 @@
+@use "breakpoints" as bp;
 .footer {
   background: linear-gradient(90deg, #2390dc 0%, #2bc8c8 100%);
   text-align: center;
+  padding-top: 46px;
+
+  @include bp.mq(md) {
+    padding-top: 60px;
+  }
 }
 
 .footer__inner {
-  padding-top: 46px;
+  @include bp.mq(md) {
+    padding-inline: 110px 230px;
+  }
 }
 
 .footer__access {
   display: flex;
   flex-direction: column;
   gap: 24px;
+
+  @include bp.mq(md) {
+    flex-direction: row;
+    gap: 78px;
+    justify-content: space-between;
+  }
+}
+
+.footer__main {
+  @include bp.mq(md) {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    gap: 16px;
+  }
 }
 
 .footer__logo {
   margin-inline: auto;
+
+  @include bp.mq(md) {
+    margin-inline: unset;
+  }
+
   img {
     width: 160px;
   }
@@ -43,12 +71,21 @@
   display: flex;
   flex-direction: column;
   gap: 36px;
+
+  @include bp.mq(md) {
+    flex-direction: row;
+    gap: 87px;
+  }
 }
 
 .footer__menu {
   display: flex;
   flex-direction: column;
   gap: 10px;
+
+  @include bp.mq(md) {
+    flex-direction: row;
+  }
 }
 
 .footer__menu--link {
@@ -64,7 +101,6 @@
 }
 
 .footer__sns--link {
-  
   img {
     width: 30px;
   }
