--- a/sass/_parts.scss
+++ b/sass/_parts.scss
@@ -1,3 +1,4 @@
+@use "breakpoints" as bp;
 @use "variable" as var;
 
 .wrapper {
@@ -74,7 +75,7 @@
   box-shadow: 4px 3px 26px 0px rgba(0, 0, 0, 0.16);
 }
 
-// 見出し
+// 見出し パターン1
 .heading1 {
   text-align: center;
   font-family: var.$font-family-en;
@@ -84,6 +85,13 @@
   letter-spacing: 3px;
   padding-bottom: calc(6px + 3px);
   position: relative;
+
+  @include bp.mq(md) {
+    font-size: 36px;
+    font-weight: 700;
+    letter-spacing: 3.6px;
+    padding-bottom: calc(2px + 3px);
+  }
 }
 
 .heading-bar {
@@ -97,10 +105,27 @@
   background: #2bc8c8;
 }
 
+// 見出し パターン2
 .heading2 {
   display: flex;
   flex-direction: column;
   gap: 2px;
+
+  @include bp.mq(md) {
+    flex-direction: row;
+    align-items: center;
+
+    &.is--case-study,
+    &.is--price,
+    &.is--seminar {
+      gap: 30px;
+    }
+
+    &.is--company,
+    &.is--blog {
+      gap: 28px;
+    }
+  }
 }
 
 .heading-en {
