--- a/sass/_seminar.scss
+++ b/sass/_seminar.scss
@@ -1,9 +1,19 @@
+@use "breakpoints" as bp;
+
 .seminar {
   background: #fff;
+
+  @include bp.mq(md) {
+    padding-block: 100px;
+  }
 }
 
 .seminar__inner {
   padding-inline: 15px;
+
+  @include bp.mq(md) {
+    padding-inline: 100px;
+  }
 }
 
 .seminar__head {
@@ -14,6 +24,11 @@
   display: flex;
   flex-direction: column;
   gap: 36px;
+
+  @include bp.mq(md) {
+    margin-top: 38px;
+    gap: 40px;
+  }
 }
 
 .seminar__card {
@@ -24,9 +39,16 @@
   box-shadow: 5px 7px 34px 0px #f1f1f1;
   padding-block: 24px 30px;
   padding-inline: 12px;
+
+  @include bp.mq(md) {
+    padding: 24px;
+  }
 }
 
 .seminar-card__content {
+  display: grid;
+  grid-template-columns: 324px 1fr;
+  gap: 30px;
 }
 
 .seminar-card__image {
@@ -40,6 +62,10 @@
 
 .seminar-card__body {
   margin-top: 22px;
+
+  @include bp.mq(md) {
+    margin-top: unset;
+  }
 }
 
 .seminar-card__info {
@@ -83,4 +109,8 @@
 .seminar__button {
   margin-top: 46px;
   text-align: center;
+
+  @include bp.mq(md) {
+    margin-top: 40px;
+  }
 }
