--- a/sass/_first-view.scss
+++ b/sass/_first-view.scss
@@ -11,6 +11,7 @@
 
 .first-view__inner {
   padding-inline: 15px;
+  max-width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
