--- a/sass/_news.scss
+++ b/sass/_news.scss
@@ -13,7 +13,9 @@
   padding-inline: 15px;
 
   @include bp.mq(md) {
+    margin-inline: auto;
     padding-inline: 150px;
+    max-width: calc(930px + 300px);
   }
 }
 
